upi/azure/stack/01_vnet.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "baseName": {
            "minLength": 1,
            "type": "String",
            "metadata": {
                "description": "Base name to be used in resource names (usually the cluster's Infra ID)"
            }
        },
        "networkAPIVersion": {
            "defaultValue": "2018-12-01",
            "allowedValues": [
                "2018-12-01",
                "2018-11-01"
            ],
            "type": "String"
        }
    },
    "variables": {
        "location": "[resourceGroup().location]",
        "virtualNetworkName": "[concat(parameters('baseName'), '-vnet')]",
        "addressPrefix": "10.0.0.0/16",
        "masterSubnetName": "[concat(parameters('baseName'), '-master-subnet')]",
        "masterSubnetPrefix": "10.0.0.0/24",
        "nodeSubnetName": "[concat(parameters('baseName'), '-worker-subnet')]",
        "nodeSubnetPrefix": "10.0.1.0/24",
        "controlPlaneNsgName": "[concat(parameters('baseName'), '-controlplane-nsg')]",
        "nodeNsgName": "[concat(parameters('baseName'), '-node-nsg')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "apiVersion": "[parameters('networkAPIVersion')]",
            "location": "[variables('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('masterSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('masterSubnetPrefix')]",
                            "serviceEndpoints": [],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('controlPlaneNsgName'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('nodeSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('nodeSubnetPrefix')]",
                            "serviceEndpoints": [],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nodeNsgName'))]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('controlPlaneNsgName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('nodeNsgName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('controlPlaneNsgName')]",
            "apiVersion": "2018-10-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "apiserver_in",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nodeNsgName')]",
            "apiVersion": "2018-10-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "apiserver_in",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ]
}
